@@ -639,6 +639,7 @@ namespace aux {
 		if (m_settings.cache_size != s.cache_size
 			|| m_settings.cache_expiry != s.cache_expiry
 			|| m_settings.optimize_hashing_for_speed != s.optimize_hashing_for_speed
+			|| m_settings.file_checks_delay_per_block != s.file_checks_delay_per_block
 #ifndef TORRENT_DISABLE_MLOCK
 			|| m_settings.lock_disk_cache != s.lock_disk_cache
 #endif
